--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="nav">
         <div class="left">
-          <div class="Time">9:00</div>
+          <div class="Time">9:45</div>
         </div>
         <div class="right">
           <ion-icon name="cellular"></ion-icon>
@@ -84,7 +84,7 @@
 
         <div class="lock-screen active">
           <div class="time">
-            <h1>9:00</h1>
+            <h1 class="Time2">9:00</h1>
             <span>Sunday, November 14</span>
           </div>
           <div class="scr-lock-nav">
@@ -291,6 +291,13 @@
                     <img class="Cal" src="Cal.png" alt="" />
                   </button>
                   <label>Calculator</label>
+                </div>
+
+                <div class="icon lock-app">
+                  <button class="" onclick="LockApp()">
+                    <img class="Icons Lock" src="Lock.png" alt="" />
+                  </button>
+                  <label>Lock screen</label>
                 </div>
               </div>
             </div>
